using SyncedHealth.Center.Platform.AuditCompliance.Domain.Model.Commands;
using SyncedHealth.Center.Platform.AuditCompliance.Domain.Model.ValueObjects;

namespace SyncedHealth.Center.Platform.AuditCompliance.Domain.Model.Aggregates;

/// <summary>
/// Audit log aggregate root.
/// </summary>
/// <remarks>
/// Represents a traceability record generated by an action performed in the CortiSense platform.
/// </remarks>
public partial class AuditLog
{
    /// <summary>
    /// Initializes a new instance of the <see cref="AuditLog"/> class.
    /// Required by Entity Framework Core.
    /// </summary>
    public AuditLog()
    {
        Description = string.Empty;
    }

    /// <summary>
    /// Initializes a new instance of the <see cref="AuditLog"/> class from a command.
    /// </summary>
    /// <param name="command">The command containing the audit log creation data.</param>
    public AuditLog(CreateAuditLogCommand command)
    {
        ValidateCommand(command);

        OrganizationId = command.OrganizationId;
        ActorUserId = command.ActorUserId;
        Type = command.Type;
        Severity = command.Severity;
        ResourceType = command.ResourceType;
        ResourceId = command.ResourceId;
        Source = command.Source;
        Description = command.Description.Trim();
    }

    /// <summary>
    /// Gets the audit log identifier.
    /// </summary>
    public int Id { get; private set; }

    /// <summary>
    /// Gets the organization identifier related to the audit log.
    /// </summary>
    public int OrganizationId { get; private set; }

    /// <summary>
    /// Gets the user identifier of the actor who triggered the audited action.
    /// </summary>
    public int ActorUserId { get; private set; }

    /// <summary>
    /// Gets the audit log action type.
    /// </summary>
    public EAuditLogType Type { get; private set; }

    /// <summary>
    /// Gets the audit severity level.
    /// </summary>
    public EAuditSeverity Severity { get; private set; }

    /// <summary>
    /// Gets the affected resource type.
    /// </summary>
    public EAuditResourceType ResourceType { get; private set; }

    /// <summary>
    /// Gets the affected resource identifier.
    /// </summary>
    public int ResourceId { get; private set; }

    /// <summary>
    /// Gets the source bounded context or module that generated the audit log.
    /// </summary>
    public EAuditActionSource Source { get; private set; }

    /// <summary>
    /// Gets the audit log description.
    /// </summary>
    public string Description { get; private set; }

    private static void ValidateCommand(CreateAuditLogCommand command)
    {
        ArgumentNullException.ThrowIfNull(command);

        if (command.OrganizationId <= 0)
            throw new ArgumentException("OrganizationId must be greater than zero.", nameof(command));

        if (command.ActorUserId <= 0)
            throw new ArgumentException("ActorUserId must be greater than zero.", nameof(command));

        if (command.ResourceId <= 0)
            throw new ArgumentException("ResourceId must be greater than zero.", nameof(command));

        if (string.IsNullOrWhiteSpace(command.Description))
            throw new ArgumentException("Description cannot be empty.", nameof(command));
    }
}