namespace SyncedHealth.Center.Platform.AuditCompliance.Domain.Model.ValueObjects;

/// <summary>
/// Represents the severity level of an audit log.
/// </summary>
public enum EAuditSeverity
{
    Info,
    Warning,
    Critical
}