using SyncedHealth.Center.Platform.AuditCompliance.Domain.Model.Aggregates;
using SyncedHealth.Center.Platform.AuditCompliance.Domain.Model.Queries;

namespace SyncedHealth.Center.Platform.AuditCompliance.Domain.Services;

/// <summary>
/// Query service contract for audit log read operations.
/// </summary>
public interface IAuditLogQueryService
{
    /// <summary>
    /// Handles the query to get an audit log by its identifier.
    /// </summary>
    /// <param name="query">The query containing the audit log identifier.</param>
    /// <param name="cancellationToken">The cancellation token.</param>
    /// <returns>The audit log if found; otherwise, null.</returns>
    Task<AuditLog?> Handle(GetAuditLogByIdQuery query, CancellationToken cancellationToken);

    /// <summary>
    /// Handles the query to get all audit logs.
    /// </summary>
    /// <param name="query">The query object.</param>
    /// <param name="cancellationToken">The cancellation token.</param>
    /// <returns>The collection of audit logs.</returns>
    Task<IEnumerable<AuditLog>> Handle(GetAllAuditLogsQuery query, CancellationToken cancellationToken);

    /// <summary>
    /// Handles the query to get audit logs by organization identifier.
    /// </summary>
    /// <param name="query">The query containing the organization identifier.</param>
    /// <param name="cancellationToken">The cancellation token.</param>
    /// <returns>The collection of audit logs for the organization.</returns>
    Task<IEnumerable<AuditLog>> Handle(GetAuditLogsByOrganizationIdQuery query, CancellationToken cancellationToken);

    /// <summary>
    /// Handles the query to get audit logs by actor user identifier.
    /// </summary>
    /// <param name="query">The query containing the actor user identifier.</param>
    /// <param name="cancellationToken">The cancellation token.</param>
    /// <returns>The collection of audit logs generated by the actor user.</returns>
    Task<IEnumerable<AuditLog>> Handle(GetAuditLogsByActorUserIdQuery query, CancellationToken cancellationToken);
}